# pipekit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  architecture.md  cli-reference.md  getting-started.md  pipelines.md
src/pipekit/: __init__.py  __main__.py  artifact.py  browser.py  cli.py  daemon.py
src/pipekit/browser/: __init__.py  actions.py  contexts.py
src/pipekit/pipeline/: __init__.py  context.py  discover.py  executor.py  loader.py  runner.py  step.py  types.py
src/pipekit/pipelines/google/: search.pipeline.py
src/pipekit/pipelines/mongo/: upsert.pipeline.py
src/pipekit/pipelines/sqlite/: upsert.pipeline.py
src/pipekit/pipelines/xhs/: note.pipeline.py  search.pipeline.py  search_to_sqlite.pipeline.py  user_notes.pipeline.py
tests/: conftest.py  test_artifact.py  test_context.py  test_discover.py  test_loader.py  test_runner.py  test_step.py  test_types.py
