[project]
name = "pipekit"
version = "0.1.0"
description = "Pipeline toolkit — composable browser-automation pipelines for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tokex", email = "dev@tokex.app" }]
requires-python = ">=3.11"
keywords = ["pipeline", "automation", "playwright", "browser", "crawler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.54.0",
    "pymongo>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "ruff>=0.8",
]

[project.scripts]
pipekit = "pipekit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipekit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle
    "I",                  # isort
    "N",                  # pep8-naming
    "UP",                 # pyupgrade
    "B",                  # flake8-bugbear
    "C4",                 # flake8-comprehensions
    "SIM",                # flake8-simplify
]

# Pipeline files with embedded JS may have long lines
[tool.ruff.lint.per-file-ignores]
"src/pipekit/pipelines/xhs/*.py" = ["E501", "W605"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
